--- a/store/static/styles/sellers_uploads.css
+++ b/store/static/styles/sellers_uploads.css
@@ -15,7 +15,7 @@
 :root {
     --body-color: #E4E9F7;
     --sidebar-color: #FFF;
-    --border-color: rgb(236, 233, 233);
+    --border-color: rgb(199, 195, 195);
     --border-color2: rgb(218, 216, 216);
     --primary-color: black;
     --primary-color-light: #F6F5FF;
@@ -294,57 +294,36 @@ body.dark .switch::before {
     width: calc(100% - 100px);
     max-width: calc(100% - 100px);
 }
-.main {
-    padding: 20px;
+.main2 {
+    display: flex;
+    align-items: center;
     margin: 20px;
+  }
+.main {
+    display: flex;
+    flex-direction: column;
     background: var(--sidebar-color);
-    display: grid;
-    grid-template-columns: 1fr 1fr 3fr;
-    max-width: 100%;
-    font-size: 15x;
+    box-shadow: 0px 3px 3px 3px var(--border-color2);
+    margin: 10px 10px;
+    padding: 10px 20px;
+    
 }
-.main .customer-name {
-    display: flex;
-    flex-direction: column;
+input {
+    outline: none;
+    border: 1px solid var(--primary-color);
+    height: 30px;
+    border-radius: 6px;
+    width: 400px;
 }
-.main .customer-name .colon-name {
-    padding-bottom: 20px;
-    color: var(--black-color);
-    font-size: 14px;
-    font-weight: 600;
+button {
+    background: var(--primary-color);
+    color: var(--sidebar-color);
+    width: 135px;
+    height: 35px;
+    border: 1px solid var(--sidebar-color);
+    border-radius: 6px;
+    margin: 10px;
 }
-.main .customer-name .real-colon span {
-    font-family: myFont;
-    font-size: 24px;
-    color: var(--text-color);
-}
-.main .email {
-    display: flex;
-    flex-direction: column;
-}
-.main .email .colon-email {
-    padding-bottom: 24px;
-    color: var(--black-color);
-    font-size: 14px;
-    font-weight: 600;
-}
-.main .email .real-email span {
-    font-size: 22px;
-    font-family: myFont;
-    color: var(--text-color);
-}
-.main .reviews {
-    display: flex;
-    flex-direction: column;
-}
-.main .reviews .colon-reviews {
-    padding-bottom: 20px;
-    color: var(--black-color);
-    font-size: 14px;
-    font-weight: 600;
-}
-.main .reviews .real-reviews span {
-    font-size: 22px;
-    font-family: myFont;
-    color: var(--text-color);
+button[type=submit] {
+
 }
