--- a/store/templates/sellers_customer.html
+++ b/store/templates/sellers_customer.html
@@ -30,25 +30,25 @@
                     </li>
                     <ul class="menu-links">
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_dashboard">
                                 <i class='bx bx-analyse icon'></i>
                                 <span class="text nav-text">Dashboard</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_orders">
                                 <i class='bx bx-cart-alt icon'></i>
                                 <span class="text nav-text">Orders</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_customer">
                                 <i class='bx bx-group icon'></i>
                                 <span class="text nav-text">Customers</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_uploads">
                                 <i class='bx bx-objects-horizontal-left icon'></i>
                                 <span class="text nav-text">Activites</span>
                             </a>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="bottom-content">
                     <li class="">
-                        <a href="#">
+                        <a href="/seller_logout">
                             <i class='bx bx-log-out icon'></i>
                             <span class="text nav-text">Logout</span>
                         </a>
