--- a/store/static/styles/seller-signup.css
+++ b/store/static/styles/seller-signup.css
@@ -121,6 +121,39 @@ input:focus {
     justify-content: flex-end;
     font-family: fontBold2;
 }
+.the-alert-danger {
+    width: 100%;
+    height:30px;
+    display: flex;
+    background: white;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+}
+.danger-btn {
+    width: 20px;
+    margin-right: 10px;
+    background: rgb(248, 171, 171);
+    border: none;
+    color: red;
+}
+
+.the-alert-success {
+    width: 100%;
+    height:30px;
+    display: flex;
+    background: white;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+}
+.close-btn{
+    width: 20px;
+    margin-right: 10px;
+    background: rgb(163, 211, 163);
+    border: none;
+    color: green
+}
 
 .primary-btn {
     height: 50px;
