--- a/store/static/styles/sign_in.css
+++ b/store/static/styles/sign_in.css
@@ -130,7 +130,39 @@ input:focus {
     font-weight: bold;
     font-size: 20px;
 }
+.the-alert-danger {
+    width: 100%;
+    height:30px;
+    display: flex;
+    background: white;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+}
+.danger-btn {
+    width: 20px;
+    margin-right: 10px;
+    background: rgb(248, 171, 171);
+    border: none;
+    color: red;
+}
 
+.the-alert-success {
+    width: 100%;
+    height:30px;
+    display: flex;
+    background: white;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+}
+.close-btn{
+    width: 20px;
+    margin-right: 10px;
+    background: rgb(163, 211, 163);
+    border: none;
+    color: green
+}
 @media only screen and (max-width: 767px) {
     .container {
         margin-top: 100px;
