--- a/store/templates/seller_signup.html
+++ b/store/templates/seller_signup.html
@@ -13,6 +13,27 @@
     <script src="../static/Scripts/2-sellersignin.js"></script>
 </head>
     <body>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    {% if category == 'error' %}
+    <div class="the-alert-danger">
+        {{ message }}
+        <button type="button" class="danger-btn" data-dismiss="danger-btn">
+            <span aria-hidden="true" class="the_alert">&times;</span>
+        </button>
+    </div>
+    {% else %}
+    <div class="the-alert-success">
+        {{ message }}
+        <button type="button" class="close-btn" data-dismiss="alert">
+            <span aria-hidden="true" class="the-alert">&times;</span>
+        </button>
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
     <div class="container">
         <div class="logo">
         </div>
