--- a/store/templates/sellers_upload.html
+++ b/store/templates/sellers_upload.html
@@ -30,25 +30,25 @@
                     </li>
                     <ul class="menu-links">
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_dashboard">
                                 <i class='bx bx-analyse icon'></i>
                                 <span class="text nav-text">Dashboard</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_orders">
                                 <i class='bx bx-cart-alt icon'></i>
                                 <span class="text nav-text">Orders</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_customer">
                                 <i class='bx bx-group icon'></i>
                                 <span class="text nav-text">Customers</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="/dashboard">
+                            <a href="/seller_uploads">
                                 <i class='bx bx-objects-horizontal-left icon'></i>
                                 <span class="text nav-text">Activites</span>
                             </a>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="bottom-content">
                     <li class="">
-                        <a href="#">
+                        <a href="/seller_logout">
                             <i class='bx bx-log-out icon'></i>
                             <span class="text nav-text">Logout</span>
                         </a>
@@ -77,9 +77,9 @@
         </nav>
         <section class="home">
             <div class="main2">
-            <form id="uploadForm" enctype="multipart/form-data" method="POST"  action="{{ url_for('seller_views.sellerViews') }}">
+            <form id="uploadForm" enctype="multipart/form-data" method="POST"  action="{{ url_for('seller_views.sellers_uploads') }}">
                 <div class="main">
-                <label for="productName">Product Name:</label>
+                <label for="productName">Product Name</label>
                 <input 
                 type="text" 
                 id="productName"
@@ -89,9 +89,21 @@
                 </div>
             
                 <div class="main">
-                <label for="productPrice">Product Price:</label>
+                    <label for="category">Choose a category:</label>
+                    <select id="productCategory" name="productCategory" class="the-control" >
+                        <option value="T-shirts">T-shirts</option>
+                        <option value="Boots">Boots</option>
+                        <option value="Men Native">Men Native</option>
+                        <option value="Skin care">Skin care</option>
+                        <!-- Add more options as needed -->
+                    </select>
+                    </div>
+                <div class="main">
+                <label for="productPrice">Product Price</label>
                 <input 
                     type="number" 
+                    step="0,01"
+                    min="0"
                     id="productPrice" 
                     name="productPrice" 
                     class="the-control" 
@@ -99,25 +111,25 @@
                 </div>
             
                 <div class="main">
-                    <label for="productPricePerInch">Product Sizes:</label>
+                    <label for="productSize">Enter Product Sizes</label>
                     <input 
-                        type="number" 
-                        id="productPricePerInch" 
-                        name="productPricePerInch" 
+                        type="text" 
+                        id="productSize" 
+                        name="productSize" 
                         class="the-control" 
                     />
                     </div>
                 <div class="main">
-                <label for="productGram">Product Gram:</label>
+                <label for="productDescription">Product Description</label>
                 <input 
-                    type="number"
-                    id="productQuantity" 
-                    name="productQuantity" 
+                    type="text"
+                    id="productDescription" 
+                    name="productDescription" 
                     class="the-control" 
-                 />
+                />
                 </div>
                 <div class="main">
-                <label for="productColor">Product Color:</label>
+                <label for="productColor">Product Color</label>
                 <input type="text"
                     id="productColor"
                     name="productColor" 
@@ -126,7 +138,7 @@
                 </div>
             
                 <div class="main">
-                <label for="productImage">Product Image:</label>
+                <label for="productImage">Product Image</label>
                 <input type="file" 
                     id="productImage" 
                     name="productImage" 
