--- a/store/templates/sellers_upload.html
+++ b/store/templates/sellers_upload.html
@@ -143,6 +143,8 @@
                     id="productImage" 
                     name="productImage" 
                     accept="image/*" 
+                    multiple
+                    required
                     class="the-control"
                 />
                 </div>
