--- a/store/templates/sellers_upload.html
+++ b/store/templates/sellers_upload.html
@@ -79,11 +79,11 @@
             <div class="main2">
             <form id="uploadForm" enctype="multipart/form-data" method="POST"  action="{{ url_for('seller_views.sellers_uploads') }}">
                 <div class="main">
-                <label for="productName">Product Name</label>
+                <label for="productName">Brand Name</label>
                 <input 
                 type="text" 
-                id="productName"
-                name="productName" 
+                id="BrandName"
+                name="BrandName" 
                 class="the-control"
                 />
                 </div>
