--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Shoopers{% endblock %}</title>
+    <title>{% block title %}Shoppers{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='../static/styles/store.css' rel='stylesheet'>
 </head>
 <body>
-    <h1>shoppers page</h1>
+    <header class="the-headers">
+        <div class="header-container">
+            <div class="shipping-sales">
+                <span class="head-cont">
+                    Free shipping and 30 days returns
+                </span>
+            </div>
+            <div class="Business-name">
+                <span class="head-cont">
+                    Shoppers
+                </span>
+            </div>
+            <div class="user-nav">
+                <span class="user-cont">
+                    <i class='bx bx-search'></i>
+                </span>
+                <span class="user-cont">
+                    <i class='bx bxs-user-detail'></i>
+                </span>
+                <span class="user-cont">
+                    <i class='bx bx-shopping-bag'></i>
+                </span>
+            </div> 
+        </div>
+    </header>
 </body>
 </html>
