--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Shoppers{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://www.flaticon.com/free-icons/others" >
     <link href='../static/styles/store.css' rel='stylesheet'>
 </head>
 <body>
@@ -31,8 +32,160 @@
                 <span class="user-cont">
                     <i class='bx bx-shopping-bag'></i>
                 </span>
+                <span class="menu">
+                    <i class='bx bx-menu'></i>
+                </span>
             </div> 
         </div>
     </header>
+    <nav class="categories">
+        <span class="categories-name">New In</span>
+        <span class="categories-name">Designers</span>
+        <span class="categories-name">Sunglasses</span>
+        <span class="categories-name">Clothing Materials</span>
+        <span class="categories-name">T-shirts</span>
+        <span class="categories-name">Tops</span>
+        <span class="categories-name">Pants</span>
+        <span class="categories-name">Accessories</span>
+        <span class="categories-name">Bags</span>
+        <span class="categories-name">Scents</span>
+        <span class="categories-name">Shoes</span>
+        <span class="categories-name">Jewelry</span>
+        <span class="categories-name">Wrist Watches</span>
+        <span class="categories-name">Boots</span>
+        <span class="categories-name">Head Wears</span>
+        <span class="categories-name">Slides</span>
+        <span class="categories-name">Palms/Slippers</span>
+    </nav>
+    <div class="cat-name">
+        <span class="goods-category">Men Everything</span>
+    </div>
+    <div class="main">
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+            
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg">
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+            <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div> 
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+            <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div> 
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="Description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <img src="../static/images/glasses.jpg" height=400px;>
+            </div>
+            <div class="description">
+            </div>
+            <div class="loading">
+                <img src="../static/images/menu.png">
+            </div> 
+        </div>
+    </div>
 </body>
 </html>
