--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -63,7 +63,77 @@
     <div class="main">
         <div class="pics-description">
             <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/offblack.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
+            </div>
+            <div class="description">
+                <span class="brandname">Offwhite</span>
+                <span class="Description">T-shirt by exclusive closet</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;35,000</span>
+            </div>
+            
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <div class="images2">
+                    <img src="../static/images/blue.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
+            </div>
+            <div class="description">
+                <span class="brandname">Gorgio Armani</span>
+                <span class="Description">Fashion Hooded Jacket by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;12,000</span>
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <div class="images2">
+                    <img src="../static/images/finesneak.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
+            </div>
+            <div class="description">
+                <span class="brandname">Nike</span>
+                <span class="Description">Sneakers by stella McCartney</span>
+                <span class="size">43, 45, 47, 50</span>
+                <span class="price">&#8358;105,000</span>
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <div class="images2">
+                    <img src="../static/images/glasses.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
+            </div>
+            <div class="description">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">All sizes</span>
+                <span class="price">&#8358;50,000</span>
+            </div>
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <div class="images2">
+                    <img src="../static/images/next.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
                 <span class="brandname">Rayban</span>
@@ -71,120 +141,118 @@
                 <span class="size">S, M, L, XL, XLL</span>
                 <span class="price">&#8358;50,000</span>
             </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
+        </div>
+        <div class="pics-description">
+            <div class="images">
+                <div class="images2">
+                    <img src="../static/images/niveadeep.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
+            </div>
+            <div class="description">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div>
         </div>
         <div class="pics-description">
             <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/bracelet.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
-            </div>
-            
-        </div>
-        <div class="pics-description">
-            <div class="images">
-                <img src="../static/images/glasses.jpg">
-            </div>
-            <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div>
         </div>
         <div class="pics-description">
             <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/wristwatch1.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div>
         </div>
         <div class="pics-description">
             <div class="images">
-            <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/ckdeo.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div> 
         </div>
         <div class="pics-description">
             <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/zarawallet.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div>
         </div>
         <div class="pics-description">
             <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/zarabrief.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div>
         </div>
         <div class="pics-description">
             <div class="images">
-            <img src="../static/images/glasses.jpg" height=400px;>
+                <div class="images2">
+                    <img src="../static/images/zaraslippers.jpg" height=400px;>
+                </div>
+                <div class="loading">
+                    <img src="../static/images/menu.png">
+                </div>
             </div>
             <div class="description">
+                <span class="brandname">Rayban</span>
+                <span class="Description">Sunglasses by stella McCartney</span>
+                <span class="size">S, M, L, XL, XLL</span>
+                <span class="price">&#8358;50,000</span>
             </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
-            </div>
-        </div>
-        <div class="pics-description">
-            <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
-            </div>
-            <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
-            </div> 
-        </div>
-        <div class="pics-description">
-            <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
-            </div>
-            <div class="Description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
-            </div>
-        </div>
-        <div class="pics-description">
-            <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
-            </div>
-            <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
-            </div>
-        </div>
-        <div class="pics-description">
-            <div class="images">
-                <img src="../static/images/glasses.jpg" height=400px;>
-            </div>
-            <div class="description">
-            </div>
-            <div class="loading">
-                <img src="../static/images/menu.png">
-            </div> 
         </div>
     </div>
 </body>
