--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <nav class="categories">
-        <span class="categories-name">New In</span>
+        <span class="categories-name1">New In</span>
         <span class="categories-name">Designers</span>
         <span class="categories-name">Sunglasses</span>
         <span class="categories-name">Clothing Materials</span>
@@ -255,5 +255,39 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-row">
+                <div class="footer-col">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">our services</a></li>
+                        <li><a href="#">privacy policy</a></li>
+                        <li><a href="#">affiliate program</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Get help</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Shipping</a></li>
+                        <li><a href="#">Returns</a></li>
+                        <li><a href="#">Order status</a></li>
+                        <li><a href="#">Payment options</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <ul>
+                        <li><a href="#"><i class='bx bxl-instagram'></i> Instagram</a></li>
+                        <li><a href="#"><i class='bx bxl-facebook-circle'></i> Facebook</a></li>
+                        <li><a href="#"><i class='bx bxl-twitter'></i> Twitter</a></li>
+                        <li><a href="#"><i class='bx bxl-youtube'></i> Youtube</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
