--- a/store/static/styles/store.css
+++ b/store/static/styles/store.css
@@ -80,10 +80,29 @@ header .header-container .user-nav span {
     background: white;
     z-index: 1000;
 }
-.categories .categories-name {
-    padding-right: 15px;
+.categories .categories-name, .categories .categories-name1 {
+    margin-right: 15px;
     font-weight: 500;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+.categories .categories-name1 {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    padding:6px 5px 6px 5px;
+}
+.categories .categories-name:hover {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    padding:6px 5px 6px 5px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.categories .categories-name1:hover {
+    margin-left: 8px;
+    transition: all 0.5s ease;
+    cursor: pointer;
 }
 
 
@@ -172,3 +191,81 @@ header .header-container .user-nav span {
     box-shadow: 5px 5px 5px rgb(231, 230, 230);
     padding: 0px 10px;
 }
+.footer {
+    background: black;
+    width: 100%;
+    padding: 50px 0;
+}
+.footer .footer-container {
+    max-width: 1170px;
+    height: 100%;
+    margin: auto;
+    background: black;
+}
+ul {
+    list-style: none;
+}
+.footer .footer-container  .footer-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer-col {
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h4 {
+    font-size: 18px;
+    color: white;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: white ;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight:300;
+    color: #bbbbbb;
+    display: flex;
+    transition: all 0.3s ease;
+    align-items: center;
+}
+.footer-col ul li a:hover {
+    cursor: pointer;
+    padding-left: 8px;
+}
+.footer-col ul li  i {
+    width: 30px;
+    height: 30px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+    color: white;
+    transition: all 0.5s ease;
+
+}
+.footer-col ul li  i:hover {
+    color: #24262b;
+    background-color: #ffffff;
+}
+
